app/assets/stylesheets/hnhiring.css.scss
$green: #18bc9c;

body {
  overflow-x: hidden;
  padding-top: 41px;
}

br {
  content: " ";
  display: block;
  margin: 0.5em;
}

p {
  margin-top: 15px;
  margin-bottom: 15px;
}

p.small {
  font-size: 16px;
}

a,
a:hover,
a:focus,
a:active,
a.active {
  outline: 0;
  color: $green;
}

.navbar {
  background: #2c3e50;
  font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.navbar .navbar-header {
  width: 100%;
  padding: 10px 15px;
}

.navbar .navbar-header a {
  color: white;
  text-decoration: none !important;

  &:hover {
    color: $green;
    text-decoration: underline !important;
  }
}

.navbar a:focus {
  outline: 0;
}

.navbar .navbar-nav {
  letter-spacing: 1px;
}

.navbar .navbar-nav li a:focus {
  outline: 0;
}

.navbar-default,
.navbar-inverse {
  border: 0;
}

.even {
  background: #d9edf7;
}

ul.comments {
  list-style: none;
  padding: 0;
  margin-top: 15px;
  font-size: 20px;
}

li.comment {
  margin: 0;
  padding: 25px 20px 15px 20px;
}

.user {
  text-decoration: underline;
  color: $green;
  font-weight: bold;
}

code {
  white-space: pre-line;
}

#hacker_news_icon {
  border: 1px solid white;
  float: left;
  margin-top: 7px;
  margin-right: 10px;
}

.title, .filter {
  color: white;
  font-size: 16px;
  margin-top: 7px;
}

.filter {
  color: black;
  font-size: 12px;
  margin-left: 7px;
  margin-top: 2px;
}

.title a {
  color: white;
  text-decoration: none;
  color: #27B33C;
}

.title a:hover {
  text-decoration: underline;
}

.highlight {
  background-color: yellow;
}

.left {
  float: left;
}

.right {
  float: right;
}

.hidden, .reply {
  display: none;
}

.green {
  color: $green;
}

